Test base de données

--- a/css/profile.css
+++ b/css/profile.css
@@ -106,3 +106,11 @@ footer {
     height: 50px;
     line-height: 50px;
 }
+.logout-icon {
+    background-color: transparent;
+    border: none;
+}
+.logout-icon {
+    width: auto;
+    height: auto;
+}
